# RIND

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.simple  LICENSE  METRICS.md  README.md  REMOTE_DEPLOYMENT.md  dns_records.example.jsonl  dns_records.example.txt  dns_records.txt  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml
benches/: dns_benchmarks.rs
docker/: Dockerfile  Dockerfile.dev  Dockerfile.simple  Dockerfile.system-metrics  docker-compose.dev.yml  docker-compose.fullstack.yml  docker-compose.monitoring.yml  docker-compose.yml
docs/: DASHBOARDS.md  DOCKER.md  FULLSTACK.md  GRAFANA_METRICS_GUIDE.md  KUBERNETES.md  METRICS.md  MONITORING.md  PROJECT_STRUCTURE.md  README.md  REMOTE_DEPLOYMENT.md  RESTRUCTURING_SUMMARY.md  SYSTEM_METRICS_GUIDE.md  cleanup_plan.md
prometheus/: prometheus.yml  record-management-alerts.yml
promtail/: promtail-config.yml
scripts/: ci-local.sh  dns-canary-with-metrics.py  dns-canary.py  docker-build.sh  eks-setup.sh  install-prereqs.sh  k3d-setup.sh  migrate-to-crd.sh  start-canary-with-metrics.sh  start-canary.sh  start-fullstack.sh  start-system-metrics.sh  system-metrics-exporter.py  test-dashboard-colors.sh  test-migrate-to-crd.sh  test-monitoring.sh  test-system-metrics.sh
src/: crd.rs  dns_records.txt  instance.rs  lib.rs  main.rs  metrics.rs  packet.rs  query.rs  server.rs  storage.rs  update.rs  watcher.rs
terraform/: .gitignore  ecr.tf  eks.tf  helm.tf  iam.tf  main.tf  outputs.tf  variables.tf  vpc.tf
(+87 files in other folders)
